styles.css
/* ~~~~~~~~~~~~~~~~~~~~ body ~~~~~~~~~~~~~~~~~~~~ */

body {
    height:100vh;
    width:98vw;
    overflow-x: hidden;
    margin: 0 1vw 0 1vw;
    
    font-family:'Courier New', Courier, monospace;
    font-size:10pt;

    display:flex;
    flex-direction:column;
    justify-content: space-between;
}
@media (orientation: portrait) {
    body {
        font-size: 20pt;
        min-height:100vh;
    }
}

/* ~~~~~~~~~~~~~~~~~~~~ Header/footer ~~~~~~~~~~~~~~~~~~~~ */

header, footer {
    box-sizing:border-box;
    border-style:solid;
    border-width:1px;

    background: #e2e2e2;
}
header {
    max-width:98vw;
    padding: 1vw;
    margin: 1vw 0 0 0;
}
footer {
    padding: 1vw;
    margin: 0 0 1vw 0;
}

/* ~~~~~~~~~~~~~~~~~~~~ h1, h2, h... ~~~~~~~~~~~~~~~~~~~~ */

h1 {
    font-size:200%;
    font-weight:bold;
}
h2 {
    font-size:150%;
    font-weight:bold;
}

/* ~~~~~~~~~~~~~~~~~~~~ nav ~~~~~~~~~~~~~~~~~~~~ */

.collapsible-container {
    display:inline-block;
}
nav button {
    margin: 0.5vw 0.5vw 0 0;
    font-family:'Courier New', Courier, monospace;     
    font-size: 100%;
    background: #c8c8c8;
}
nav li {
    display:inline;
}
nav li:before {
    content: " ~ ";
}
.collapsible-content {
    margin: 0.5vw 0 0 0;
    padding: 0.5vw;

    box-sizing:border-box;
    border-style:solid;
    border-width:1px;

    display:none;
}

/* ~~~~~~~~~~~~~~~~~~~~ gallery ~~~~~~~~~~~~~~~~~~~~ */

#gallery {
    width:100%;
    
    display:flex;
    flex-wrap: wrap;
    justify-content: center;
    flex-shrink: 0;
}
#gallery h2 {
    width: 100%;
    text-align: center;
}#gallery a {
    font-weight:bold;
}
.gallery-image-box, .gallery-image-box-landscape {
    flex-grow:1;
    margin: 0.5vw;
    display: flex;
    align-items: center;
}
@media (orientation: landscape) {
    #gallery .gallery-image-box {
        flex-basis:32%;
    }
    #gallery .gallery-image-box-landscape {
        flex-basis:64%;
    }
}
@media (orientation: portrait) {
    #gallery .gallery-image-box {
        flex-basis:48%;
    }
    #gallery .gallery-image-box-landscape {
        flex-basis:96%;
    }
}
#gallery img {
    max-width:100%;
    max-height:75vh;
    flex: 0 0 auto; /*internet explorer is just broken...*/

    display: block;
    margin-left: auto;
    margin-right: auto;
}

/* ~~~~~~~~~~~~~~~~~~~~ gallery index page ~~~~~~~~~~~~~~~~~~~~ */

#title-image-box, .featured-gallery {
    flex-grow:1;
    margin: 2vw;
    display: flex;
    flex-direction: column;
    align-items: center;
}
#title-image-box {
    flex-basis:100%;
}
@media (orientation: landscape) {
    .featured-gallery {
        flex-basis:20%;
    }
}
@media (orientation: portrait) {
    .featured-gallery {
        flex-basis:40%;
    }
}
.featured-gallery a {
    max-width:100%;
    margin: 0 0 1vw 0;
}

/* ~~~~~~~~~~~~~~~~~~~~ contact ~~~~~~~~~~~~~~~~~~~~ */

#contact-details {
    display:flex;
    align-items:center;
    justify-content: center;
    flex-direction:column;
}
#contact-details h1 {
    margin: 2vw;
}
#contact-details ul {
    list-style-type: none;
}
#contact-details ul li::before {
    content: " ~ "
}

